# codensys

metadata_service/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
metadata_service/app/: main.py
metadata_service/app/api/routes/: database_routes.py  dataset_routes.py  lineage_routes.py  search_routes.py
metadata_service/app/core/: config.py
metadata_service/app/database/: session.py
metadata_service/app/models/: __init__.py  column.py  dataset.py  lineage.py
metadata_service/app/schemas/: dataset_schema.py  lineage_schema.py  search_schema.py
metadata_service/app/services/: dataset_service.py  lineage_service.py  search_service.py
metadata_service/migrations/: env.py
metadata_service/migrations/versions/: 91c4a6dc0456_create_metadata_tables.py
